# proteomics-batch-ae

./: .gitignore  PATCH_NOTES.md  README.md  pyproject.toml  requirements.txt
batchae/: __init__.py  baselines.py  data.py  heldout_eval.py  metrics.py  model.py  pareto.py  threading.py  training.py
configs/: cyverse_commands.md  cyverse_cpu_commands.md
proteomics_batch_ae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: evaluate_heldout_baselines.py  inspect_dataset.py  run_experiment.py  run_pareto_experiment.py  run_real_experiment.py  summarize_experiment_runs.py
