[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteomics-batch-ae"
version = "0.1.0"
description = "Adversarial autoencoder and tuned baselines for synthetic proteomics batch correction"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "torch>=2.0",
    "optuna>=3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["batchae*"]
