[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteomics-batch-ae"
version = "0.2.0"
description = "Real-data proteomics batch correction with adversarial autoencoder baselines"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "optuna>=3.0",
    "matplotlib>=3.7",
    "combat>=0.3.3",
]

[tool.setuptools.packages.find]
include = ["batchae*"]
